--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Whatsapp Direct Messaage sender</string>
+    <string name="app_name">WhatsApp Direct Message Sender</string>
 </resources>
