--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">WhatsApp Direct Message Sender</string>
+    <string name="app_name">Direct Message Sender</string>
     <string name="enter_number">Enter number</string>
     <string name="enter_details">Enter Details</string>
     <string name="type_your_message">Type your Message</string>
